# aws-agentic-ai-partner-showcase-workshop

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: github-references.md
labs/: 00-setup.md  01-local-agent.md  02-voice-ticketing.md  03-identity-governance.md  04-evals-observability.md  05-production-deployment.md  06-github-update-workflow.md
prompts/: architecture-review.md  partner-booth-questions.md
scripts/: evaluate_agents.py  generate_sample_data.py  inspect_github_updates.py  refresh_github_references.py  run_demo.py  run_quality_checks.py
src/: partner_agent_stack.py
tests/: test_partner_agent_stack.py
